# SnakeCpp

./: CMakeLists.txt  GraphicElement.cpp  GraphicElement.h  GraphicOutput.cpp  GraphicOutput.h  README.md  RingBuffer.cpp  RingBuffer.h  SnakeGame.cpp  SnakeGame.h  main.cpp  makefile  snake  snakeElement.cpp  snakeElement.h  test
.github/workflows/: build.yml
Private/: GraphicElement.cpp  GraphicOutput.cpp  Input.cpp  RingBuffer.cpp  SnakeGame.cpp  main.cpp  snakeElement.cpp
Public/: GraphicElement.h  GraphicOutput.h  IInput.h  IOutput.h  Input.h  RingBuffer.h  SnakeGame.h  snakeElement.h
tests/: tests.cpp
